Fix links size and block scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,9 +7,6 @@
     padding: 0;
     margin: 0;
 }
-html {
-    scroll-behavior: smooth;
-}
 
 @layer base {
     header {
